# email-notifications

./: .env  .gitignore  Cargo.toml  client.http  configuration.yml  docker-compose.yml  init_db.sh
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health.rs  subscriptions.rs  tests.rs  utils.rs
